# eppb-platform

./: .env.example  .gitignore  .vercelignore  ARCHITECTURE.md  DEMO.md  FE1_HANDOVER.md  GITHUB_ISSUES.md  PLAN.md  README.md  SPECIFICATION.md  cleanup_github.ps1  docker-compose.yml  main.py  package.json  pyproject.toml  railway.toml  setup_github.ps1  vercel.json
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: cleanup-issues.yml  setup-issues.yml
apps/admin/: index.html  package-lock.json  package.json
apps/admin/src/: App.tsx  index.css
backend/: Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0250b204b1f2_init_forms_and_submissions.py  0bb064eb80df_init_forms_and_submissions.py
backend/app/: config.py  database.py  main.py
backend/app/models/: form.py
backend/app/routers/: forms.py  mock.py  submissions.py
backend/app/schemas/: form.py  workflow_api.py
backend/app/services/: form_queries.py  schema_handler.py  seed_forms.py  workflow_sessions.py
engine/: __init__.py  ast_evaluator.py  schema_models.py  schema_parser.py  workflow.py
eppb-design-system/: README.md
eppb-design-system/project/: README.md  SKILL.md  colors_and_type.css
eppb-design-system/project/kit/: EPPB UI Kit.html
eppb-design-system/project/preview/: brand-symbols.html  brand-wordmark.html  colors-accent.html  colors-semantic.html  colors-surfaces.html  colors-text.html  components-badges.html  components-buttons.html  components-card.html  (+7 more)
seed_data/: leasing_stage1.json  leasing_stage2.json
tests/: test_engine.py
(+34 files in other folders)
