[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eppb-platform"
version = "0.1.0"
description = "EPPB monorepo — engine package for AST workflow (v2.0)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*"]
